--- a/Source/Code/AdminMigrationUtility/AdminMigrationUtility/AdminMigrationUtility.CustomPages.NUnit/AdminMigrationUtility.CustomPages.NUnit.csproj
+++ b/Source/Code/AdminMigrationUtility/AdminMigrationUtility/AdminMigrationUtility.CustomPages.NUnit/AdminMigrationUtility.CustomPages.NUnit.csproj
@@ -48,7 +48,7 @@
     </Reference>
     <Reference Include="Relativity.API, Version=9.2.190.9, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\..\..\..\..\lib\Relativity SDK\9.4.224.2\Relativity API\Lib\Relativity.API.dll</HintPath>
+      <HintPath>..\..\..\..\..\..\..\..\Program Files\kCura Corporation\Relativity SDK\Relativity API\Lib\Relativity.API.dll</HintPath>
     </Reference>
     <Reference Include="Rhino.Mocks, Version=3.6.0.0, Culture=neutral, PublicKeyToken=0b3305902db7183f, processorArchitecture=MSIL">
       <HintPath>..\..\packages\RhinoMocks.3.6.1\lib\net\Rhino.Mocks.dll</HintPath>
