--- a/Source/Code/AdminMigrationUtility/AdminMigrationUtility/AdminMigrationUtility.Emailer/AdminMigrationUtility.Emailer.csproj
+++ b/Source/Code/AdminMigrationUtility/AdminMigrationUtility/AdminMigrationUtility.Emailer/AdminMigrationUtility.Emailer.csproj
@@ -32,10 +32,10 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="kCura.Relativity.Client">
-      <HintPath>..\..\..\..\..\..\lib\Relativity SDK\9.4.224.2\Services API\Client\kCura.Relativity.Client.dll</HintPath>
+      <HintPath>..\..\..\..\..\..\..\..\Program Files\kCura Corporation\Relativity SDK\Services API\Client\kCura.Relativity.Client.dll</HintPath>
     </Reference>
     <Reference Include="Relativity.API">
-      <HintPath>..\..\..\..\..\..\..\lib\Relativity SDK\9.4.224.2\Relativity API\Lib\Relativity.API.dll</HintPath>
+      <HintPath>..\..\..\..\..\..\..\..\Program Files\kCura Corporation\Relativity SDK\Relativity API\Lib\Relativity.API.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
